	* src/search.c (do_replace_loop, go_looking, findnextstr): Report
	"Cancelled" instead of "Not found" when the user aborts a replace
	that is taking too long.  This fixes Savannah bug #47439.
	* src/winio.c (do_replace_highlight): Rename this to 'spotlight',
	for clarity, and for contrast with 'do_replace/do_replace_loop'.
	* src/winio.c (spotlight): Rename a variable for clarity.

2016-03-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main), src/text.c (do_justify, do_verbatim_input),
	src/winio.c (parse_escape_sequence): Place the cursor in the edit
	window also when --constantshow is in effect, after a ^J Justify or
	an invalid escape sequence, and when entering a verbatim keystroke.
	Leave the cursor off during Unicode input, for extra feedback.
	* src/browser.c (do_browser): Improve the wording of a message.
	* src/chars.c (is_valid_unicode): Speed up Unicode validation.
	* src/text.c (do_int_spell_fix): Allow to stop replacing a word
	without aborting the entire spell-fixing session.
	* src/search.c (do_replace_loop): Chop a now-unused parameter.

2016-03-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (statusbar): Don't bother putting back the cursor in
	the edit window, as it is off anyway, and will be placed back in the
	main loop.  This prevents a segfault when trying to open a directory.
	* src/search.c (findnextstr): Provide feedback when searching takes
	longer than roughly half a second (on average).
	* src/*.c: Remove the 'last_replace' variable that is never used.
	* src/winio.c (parse_kbinput): Delete a no-op.

2016-03-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (findnextstr): Prevent the internal spell checker from
	finding the first occurrence twice.  And delete the piece of dead code
	that was meant to do this.  This fixes Savannah bug #47188.
	* src/search.c (findnextstr): Clean up and rename a variable.
	* src/search.c (findnextstr): Poll the keyboard once per second.