@@ -2793,15 +2793,15 @@ char **cwd_tab_completion(const char *buf, bool allow_files, size_t
  * position should be advanced.  refresh_func is the function we will
  * call to refresh the edit window. */
 char *input_tab(char *buf, bool allow_files, size_t *place, bool
-	*lastwastab, void (*refresh_func)(void), bool *list)
+	*lastwastab, void (*refresh_func)(void), bool *listed)
 {
     size_t num_matches = 0, buf_len;
     char **matches = NULL;
 
     assert(buf != NULL && place != NULL && *place <= strlen(buf) &&
-		lastwastab != NULL && refresh_func != NULL && list != NULL);
+		lastwastab != NULL && refresh_func != NULL && listed != NULL);
 
-    *list = FALSE;
+    *listed = FALSE;
 
     /* If the word starts with `~' and there is no slash in the word,
      * then try completing this word as a username. */
@@ -2939,7 +2939,7 @@ char *input_tab(char *buf, bool allow_files, size_t *place, bool
 	    }
 
 	    wnoutrefresh(edit);
-	    *list = TRUE;
+	    *listed = TRUE;
 	}
 
 	free(mzero);
@@ -2949,7 +2949,7 @@ char *input_tab(char *buf, bool allow_files, size_t *place, bool
 
     /* Only refresh the edit window if we don't have a list of filename
      * matches on it. */
-    if (!*list)
+    if (!*listed)
 	refresh_func();
 
     return buf;
