@@ -5,6 +5,8 @@
 	* src/winio.c (do_replace_highlight): Rename this to 'spotlight',
 	for clarity, and for contrast with 'do_replace/do_replace_loop'.
 	* src/winio.c (spotlight): Rename a variable for clarity.
+	* src/files.c (input_tab), src/prompt.c (get_prompt_string):
+	Rename a variable to better indicate booleanness.
 
 2016-03-29  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (main), src/text.c (do_justify, do_verbatim_input),
